Fix overflow errors

--- a/resources/styles/_favourites.scss
+++ b/resources/styles/_favourites.scss
@@ -31,6 +31,8 @@
   align-items: center;
   padding: 0;
   text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .favourite__stop {
