--- a/resources/styles/main.scss
+++ b/resources/styles/main.scss
@@ -9,6 +9,7 @@ $primary: #005ea8;
 
 $custom-control-indicator-checked-bg: $dark;
 $custom-control-indicator-active-bg: $dark;
+$small-font-size: $font-size-base * 0.8;
 
 $line-types: (
   'trolleybus': #419517,
